--- a/Dirkwood Dragons/Assembly-CSharp.csproj
+++ b/Dirkwood Dragons/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
      <Compile Include="Assets\Movement.cs" />
      <Compile Include="Assets\Scripts\HeroAnimation.cs" />
+     <Compile Include="Assets\Scripts\MovingObject.cs" />
  <Reference Include="UnityEngine.Networking">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
  </Reference>
