--- a/Dirkwood Dragons/Assembly-CSharp.csproj
+++ b/Dirkwood Dragons/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Movement.cs" />
+     <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\Goblin.cs" />
      <Compile Include="Assets\Scripts\HeroAnimation.cs" />
      <Compile Include="Assets\Scripts\MovingObject.cs" />
